--- a/maplibre.html
+++ b/maplibre.html
@@ -15,7 +15,7 @@
 <body>
 <div id="map"></div>
 <script>
-  const MAPTILER_KEY = 'get_your_own_OpIi9ZULNHzrESv6T2vL';
+  const MAPTILER_KEY = '0ZkqGyCCrA2Lm6urQkfT';
   const map = new maplibregl.Map({
       style: `https://api.maptiler.com/maps/basic-v2/style.json?key=${MAPTILER_KEY}`,
       center: [110.363173,-7.785726],
